--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/kentozuka/perl_assignment#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "libxmljs": "^0.19.7",
     "puppeteer": "^5.2.1"
   }
 }
